fix divider spacing

--- a/app/src/components/TextEditor/components/FloatingToolBar/FloatingToolbar.css
+++ b/app/src/components/TextEditor/components/FloatingToolBar/FloatingToolbar.css
@@ -24,6 +24,6 @@
 .divider {
   width: 1px;
   min-height: 100%;
-  margin: 0.25rem;
+  margin: 0.375rem 0.125rem;
   background-color: var(--color-primary);
 }
